text_overflow ellipsis mais bug

--- a/Systeme_7.1/Base/_propriete_reutilisable.scss
+++ b/Systeme_7.1/Base/_propriete_reutilisable.scss
@@ -12,4 +12,9 @@
 {
     background-color: #F2F2F2;
 }
-
+.text_overflow_ellipsis
+{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
