--- a/Systeme_7.1/Composants/_iconecheck.scss
+++ b/Systeme_7.1/Composants/_iconecheck.scss
@@ -76,8 +76,8 @@
     background-color: $Tertiaire;
     border-radius: 0px 15px 15px 0px;
     position: relative;
-    left: 50px;    
-    width: 60px;
+    left: 40px;    
+    width: 50px;
     height: 100%;
     
     font-size: 25px;
@@ -141,7 +141,7 @@
     
     
     100%{
-        transform: translate(-50px) ;
+        transform: translate(-40px) ;
         opacity: 1;
     }
 
