--- a/Systeme_7.1/Pages/_Menu.scss
+++ b/Systeme_7.1/Pages/_Menu.scss
@@ -71,15 +71,15 @@
 }
 .cartemenu_deuxtexte
 {
-    width: 70%;
-    padding: 20px;
    
+    width: 70%;
+    padding: 20px;  
 }
 .titremenu
 {
     margin: 2px;
     font-family: "Roboto", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     
 }
 .descriptionmenu
@@ -203,7 +203,7 @@
     height: 150px;
     box-shadow: lightgray 0px 5px 5px;
     width: 40%;
-    text-overflow: ellipsis;
+    
 }
 .cartemenu_deuxtexte
 {
@@ -216,23 +216,23 @@
     
     align-items: center;
     margin: 2px;
-    font-size: 15px;
+    font-size: 14px;
     font-family: "roboto", sans-serif;
 }
 .titremenu
 {
-    margin: 2px;
+    margin: 10px 2px;
     font-family: "Roboto", sans-serif;
-    font-size: 20px;
+    font-size: 18px;
 }
 .prix_resto
 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
+    font-size: 16px;
     width: 20%;
-
+    font-family: "Roboto", sans-serif;
 }
 
 .titrecategorie_Resto
@@ -348,7 +348,7 @@
     box-shadow: lightgray 0px 5px 5px;
     width: 38%;
     height: 80px;
-    text-overflow: ellipsis;
+    
 }
 .cartemenu_deuxtexte
 {
@@ -362,7 +362,7 @@
     align-items: center;
     margin: 2px;
     font-size: 15px;
-    font-family: "roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 .titremenu
 {
@@ -377,7 +377,7 @@
     align-items: center;
     font-size: 18px;
     width: 30%;
-
+    font-family: "Roboto", sans-serif;
 }
 
 .titrecategorie_Resto
