--- a/Systeme_7.1/Pages/_index.scss
+++ b/Systeme_7.1/Pages/_index.scss
@@ -50,6 +50,7 @@
     justify-content: center;
     align-items: center;
     padding: 30px;
+    font-family: 'Roboto', sans-serif;
 }
     }
             /* Version Desktop */
@@ -82,6 +83,7 @@ header
     flex-direction: row;
     background-color: gainsboro;
     width: 340px;
+    font-family: 'Roboto', sans-serif;
 }
 .P_reservez
 {
@@ -121,7 +123,7 @@ header
 {
    
     font-weight: 700;
-
+    font-family: 'Roboto', sans-serif;
 }
 .blocexplfonct
 {
@@ -180,10 +182,11 @@ header
     {
        
         font-weight: 700;
-    
+        font-family: 'Roboto', sans-serif;
     }
     .blocexplfonct
     {
+        font-family: 'Roboto', sans-serif;
         border-radius: 40px;
         background-color: #F2F2F2;
         margin: 30px;
@@ -390,7 +393,7 @@ header
 {
     padding: 5px;
     color: black;
-    
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -473,7 +476,7 @@ h1, h2, h3
 {
     padding: 5px;
     color: black;
-    
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -483,7 +486,7 @@ h1, h2, h3
 {
     display: flex;
     align-items: center;
-    width: 20px;
+    width: 40px;
 }
 
 h1, h2, h3
@@ -543,6 +546,7 @@ h1, h2, h3
             display: flex;
             justify-content: center;
             align-items: center;
+            font-family: 'Roboto', sans-serif;
         }
         .figcaptionRestaurants
         {
@@ -552,6 +556,7 @@ h1, h2, h3
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            font-family: 'Roboto', sans-serif;
         }
         .Blociconecoeur
         {
